# AI-Support-Copilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirement.md
alembic/: env.py
alembic/versions/: 20260509_0001_initial_schema.py  20260509_0002_ingestion_jobs.py
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
docs/: architecture.md  setup_guide.md
examples/: eval_dataset.jsonl
examples/data/: acme_runbook.md  enterprise_support_big_runbook.md
scripts/: evaluate.py
src/ai_support_copilot/: __init__.py
src/ai_support_copilot/api/: dependencies.py  main.py
src/ai_support_copilot/core/: config.py  errors.py  logging.py
src/ai_support_copilot/domain/: models.py
src/ai_support_copilot/observability/: metrics.py
src/ai_support_copilot/providers/: factory.py  protocols.py
src/ai_support_copilot/providers/embeddings/: base.py  http_providers.py
src/ai_support_copilot/providers/llm/: base.py  http_providers.py
src/ai_support_copilot/providers/rerankers/: simple.py
src/ai_support_copilot/providers/vectorstores/: memory.py  qdrant.py
src/ai_support_copilot/repositories/: cache.py  conversations.py  db.py  documents.py  migrations.py  postgres.py  protocols.py  users.py
src/ai_support_copilot/security/: auth.py  prompt_guard.py  rate_limit.py
src/ai_support_copilot/services/: chunking.py  confidence.py  context.py  ingestion.py  parsers.py  retrieval.py  text.py
src/ai_support_copilot/workers/: ingestion_worker.py
src/ai_support_copilot/workflows/: query_graph.py
tests/: conftest.py
tests/api/: test_api.py  test_auth.py  test_ingestion_jobs.py
tests/unit/: test_chunking.py  test_confidence.py  test_provider_factory.py  test_retrieval.py
