[project]
name = "enterprise-ai-support-copilot"
version = "0.1.0"
description = "Production-grade multi-tenant AI support copilot backend with RAG, observability, evaluation, and pluggable providers."
authors = [{ name = "Kushal Soni" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "qdrant-client>=1.9.0",
    "langgraph>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
ai = [
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "sentence-transformers>=2.7.0",
]
eval = [
    "ragas>=0.1.9",
    "datasets>=2.19.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "anyio>=4.4.0",
]

[project.scripts]
copilot-api = "ai_support_copilot.api.main:run"
copilot-worker = "ai_support_copilot.workers.ingestion_worker:run"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn ai_support_copilot.api.main:app --host 0.0.0.0 --port 8000 --reload"
worker = "python -m ai_support_copilot.workers.ingestion_worker"
migrate = "python -m ai_support_copilot.repositories.migrations"
test = "pytest"
lint = "ruff check src tests alembic"
format = "ruff format src tests alembic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
